pk: offer to repair the system when an offline update failed

BUG: 412273